# urania

./: AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  askYNCBox.cpp  bwin.cpp  bwin.h  canvas.h  clkpanel.cpp  clkpanel.h  cmndlg.cpp  cmndlg.h  config.h.in  configure  configure.ac  configure.in  csr.h  csr.rc  ctrl.cpp  ctrl_sb.cpp  cv.cur  dec.h  decl.h  dialog.cpp  dialog.h  drop-h.cpp  getCLArgs.cpp  getCLArgsW.cpp  getLongPath.cpp  menu.cpp  menu.h  menudesc.cpp  (+28 more)
